--- a/_posts/2018-05-01-realite.markdown
+++ b/_posts/2018-05-01-realite.markdown
@@ -6,6 +6,20 @@ category: video
 cover: "/assets/posts/post_realite.jpg"
 ---
 
-A short movie about the elderly. Currently not public due to festival selections.
-Send me a mail for a private access.
+__Synopsis__: The everydaylife of an elderly gets interrupted by a TV failure.
+
+__Role on this project__: Director, film maker
+
+A short movie about the elderly. Shot in a few hours with a real grandma. Currently not public due to festival selections. Send me a mail for a private access.
+
+
+![photo](/assets/posts/realite/screen3.jpg)
+
+
+![photo](/assets/posts/realite/screen1.jpg)
+
+
+![photo](/assets/posts/realite/screen2.jpg)
+
+
 
