(wip) Moving forward new gatsby template

--- a/src/pages/2018-09-01-humanlapse/index.mdx
+++ b/src/pages/2018-09-01-humanlapse/index.mdx
@@ -1,25 +1,32 @@
 ---
 path: /humanlapseProject
-layout: post
-title: 'Humanlapse'
-subtitle: Portraits in motion
-date: '2019-02-01'
+layout: article
 category: portfolio
-image: 'cover.png'
+language: en
+title: Humanlapse
+subtitle: Portraits in motion
+description: description
+date: 2019-02-01'
+image:  cover.jpg
+embeddedImagesLocal:
+    - b-2.jpg
+    - b-5.jpg
+    - b-11.jpg
+    - b-1.jpg
+    - b-7.jpg
+    - b-10.jpg
 ---
 
-<br/>
-<br/>
 
 ## Description
 
-The **Humanlapse Project** is a photography project that aims to explore usage of the timelapse and hyperlapse techniques for human subjects.
+**Humanlapse** is a photography project aiming to explore usage of timelapse and hyperlapse techniques for portraits.
 
 <a href="https://instagram.com/maximetouroute/" target="_blank" rel="noreferrer noopener">Check out Humanlapses on Instagram (Low quality)</a>
 
 [Check out humanlapses on the showcase website (High quality)](http://maximetouroute.github.io/humanlapse)
 
-<br/>
+
 
 #### Project Teaser
 
@@ -27,8 +34,7 @@ The **Humanlapse Project** is a photography project that aims to explore usage o
 
 [Direct Link](https://vimeo.com/292003342)
 
-<br/>
-<br/>
+
 
 ## Exhibitions
 
@@ -40,19 +46,11 @@ The **Humanlapse Project** is a photography project that aims to explore usage o
 
 [Direct Link](https://vimeo.com/306033197)
 
-<br/>
+
 
 ## Scenography
 
-For this exhibition, I've built digital photo frames each one looping a single humanlapse video.
-The frames are fully autonomous. They turn on in the morning and turn off in the evening without the need of any human intervention.
-The frames are fixed on poles and disposed in an open area so visitors can walk around each humanlapse as they would for a photo exhibition.
+Digital photo frames, each one looping a single humanlapse video. The frames are fully autonomous, turning on in the morning and turning off in the evening. They can be fixed on poles or walls so visitors can walk around each humanlapse as they would for a photo exhibition.
 
-<photo-grid>
-<img src="b-2.jpg" />
-<img src="b-5.jpg" />
-<img src="b-11.jpg" />
-<img src="b-1.jpg" />
-<img src="b-7.jpg" />
-<img src="b-10.jpg" />
-</photo-grid>
+
+<ImageGrid props={props}/>
