--- a/src/pages/2018-11-30-the-live-drawing-project/index.fr.mdx
+++ b/src/pages/2018-11-30-the-live-drawing-project/index.fr.mdx
@@ -1,26 +1,28 @@
 ---
 path: /livedrawing
-layout: post
+layout: article
+category: portfolio
+language: fr
 title: Live Drawing Project
 subtitle: Collaborative Drawing
+description: description
 date: '2020-01-01'
-category: portfolio
-image: 'b.jpg'
+image:  b.jpg
+embeddedImagesLocal:
+- 26v_2_webw.jpg
+- web-6.jpg
+- web-11.jpg
+- web-21.jpg
+- web-14.jpg
+- SprayingBoard_7.jpg
+- web-23.jpg
+- b.jpg
+- 6.jpg
 ---
 
-## Description
+<ImageGrid props={props}/>
+
 
 A digital arts project about experiencing the possibilities of collaborative and live drawing.
 More informations about it on the official website [Live Drawing Project](//thelivedrawingproject.com).
 
-<photo-grid>
-<img src="26v_2_webw.jpg"/>
-<img src="web-6.jpg"/>
-<img src="web-11.jpg"/>
-<img src="web-21.jpg"/>
-<img src="web-14.jpg"/>
-<img src="SprayingBoard_7.jpg"/>
-<img src="web-23.jpg"/>
-<img src="b.jpg"/>
-<img src="6.jpg"/>
-</photo-grid>
