--- a/src/pages/2019-04-01-space-dances/index.fr.mdx
+++ b/src/pages/2019-04-01-space-dances/index.fr.mdx
@@ -1,11 +1,13 @@
 ---
 path: /spacedances
-layout: post
+layout: article
+category: portfolio
+language: fr
 title: Space Dances
 subtitle: Augmented Reality
+description: description
 date: '2020-01-01'
-category: portfolio
-image: 'cover2.jpg'
+image: cover2.jpg
 ---
 
 <iframe src="https://player.vimeo.com/video/388504943" frameborder="0" allowfullscreen width="1920" height="1080"></iframe>
