--- a/src/pages/2020-03-01-monolith/index.mdx
+++ b/src/pages/2020-03-01-monolith/index.mdx
@@ -1,12 +1,17 @@
 ---
 path: /monolith
-layout: post
+layout: article
+category: portfolio
+language: en
 title: Monolith
 subtitle: Interactive Musical Performance
+description: description
 date: '2020-01-01'
-category: portfolio
-image: 'cover.jpg'
+image: cover.jpg
+embeddedImagesLocal:
+    - cover.jpg
 ---
+
 
 ![Cover](cover.jpg)
 
