--- a/src/pages/about/index.fr.mdx
+++ b/src/pages/about/index.fr.mdx
@@ -1,17 +1,21 @@
 ---
 path: /about
 layout: page
+language: fr
 title: About
+description: une description
 image: 'profile.jpg'
+embeddedImagesLocal:
+  - profile.jpg
 ---
 
-<div class="squareGatsbyPicture" style="min-width: 70%">
+<!-- <div class="squareGatsbyPicture" style="min-width: 70%">
 
 <img src="profile.jpg"></img>
 
 </div>
 <br/>
-<br/>
+<br/> -->
 
 ### — I'm Maxime, engineer specialised in **audiovisual arts**
 
@@ -20,9 +24,9 @@ Passionate by cinema, photography and digital arts, I love to work on projects i
 Currently open to new projects  
 — if you would like to make something together, get in touch at [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
 
-<br><br>
+<!-- <br><br> -->
 
-- [Work Showcase](/)
+- [Work Showcase](/)  
 - [Photography](/photography)
 - [Color Grading](/colorist)
 
