--- a/src/pages/2019-08-01-indice50/index.fr.mdx
+++ b/src/pages/2019-08-01-indice50/index.fr.mdx
@@ -1,18 +1,21 @@
 ---
 path: /indice50
-layout: post
-title: Indice 50
-subtitle: Short movie
-date: '2019-01-01'
+layout: article
 category: portfolio
-image: 'cover.jpg'
+language: fr
+title: Indice 50
+subtitle: Short Movie
+description: description
+date: '2019-01-01'
+image: cover.jpg
 ---
+
 
 <iframe src="https://www.youtube.com/embed/5gkkIeeAuSU?rel=0" frameborder="0" allowfullscreen width="1920" height="1080"></iframe>
 
 [Direct Link](https://www.youtube.com/watch?v=5gkkIeeAuSU)
 
-## Description
+#### Description
 
 Indie short movie made in one afternoon. Co-directed with **Vincent Montalieu**.
 
