Big update to gatsby v3 and new template

--- a/src/pages/2018-05-01-realite/index.mdx
+++ b/src/pages/2018-05-01-realite/index.mdx
@@ -1,18 +1,25 @@
 ---
 path: /realite
-layout: post
-title: Réalité
-subtitle: Short movie
-date: '2019-01-02'
+layout: article
 category: portfolio
-image: 'post_realite.jpg'
+language: en
+title: Réalité
+subtitle: Short Movie
+description: A short movie about the elderly. Shot in a few hours with a real grandma.
+date: '2019-01-02'
+image: post_realite.jpg
+priority: 4
+embeddedImagesLocal:
+  - screen3.jpg
+  - screen1.jpg
+  - screen2.jpg
 ---
 
-## Description
+A short movie about the elderly. Shot in a few hours with a real grandma.
 
-A short movie about the elderly. Shot in a few hours with a real grandma.  
-**Currently not public due to festival selections.**  
-[Send me a mail](mailto:maxime.touroute@gmail.com) for a private access.
+Not public.
+
+[Send me a mail](mailto:maxime.touroute@gmail.com) for a streaming link.
 
 #### Synopsis
 
@@ -25,8 +32,8 @@ The everydaylife of an elderly gets interrupted by a TV failure.
 - Comete Film Festival
 - International Film Festival of the Red Cross
 
-<br/>
-<br/>
+<br />
+<br />
 
 ![Snapshot of Realité short movie](screen3.jpg)  
 ![Snapshot of Realité short movie](screen1.jpg)  
