--- a/src/pages/2018-09-01-humanlapse/index.fr.mdx
+++ b/src/pages/2018-09-01-humanlapse/index.fr.mdx
@@ -4,53 +4,62 @@ layout: article
 category: portfolio
 language: fr
 title: Humanlapse
-subtitle: Portraits in motion
-description: description
-date: 2019-02-01'
-image:  cover.jpg
+subtitle: Portraits en mouvement
+description: Projet photographique explorant l'usage du timelapse et de l'hyperlapse pour des portraits.
+date: '2019-02-01'
+image: cover.jpg
+priority: 3
 embeddedImagesLocal:
-    - b-2.jpg
-    - b-5.jpg
-    - b-11.jpg
-    - b-1.jpg
-    - b-7.jpg
-    - b-10.jpg
+  - b-2.jpg
+  - b-5.jpg
+  - b-11.jpg
+  - b-1.jpg
+  - b-7.jpg
+  - b-10.jpg
 ---
 
+Projet photographique explorant l'usage du timelapse et de l'hyperlapse pour des portraits.
 
-## Description
+<a
+  href="https://instagram.com/maximetouroute/"
+  target="_blank"
+  rel="noreferrer noopener"
+>
+  Voir des Humanlapses sur Instagram (Basse qualité)
+</a>
 
-**Humanlapse** is a photography project aiming to explore usage of timelapse and hyperlapse techniques for portraits.
+[Voir des Humanlapses sur le site galerie (Haute qualité)](http://maximetouroute.github.io/humanlapse)
 
-<a href="https://instagram.com/maximetouroute/" target="_blank" rel="noreferrer noopener">Check out Humanlapses on Instagram (Low quality)</a>
+#### Teaser
 
-[Check out humanlapses on the showcase website (High quality)](http://maximetouroute.github.io/humanlapse)
-
-
-
-#### Project Teaser
-
-<iframe src="https://player.vimeo.com/video/292003342" frameborder="0" allowfullscreen width="1920" height="1080"></iframe>
+<iframe
+  src="https://player.vimeo.com/video/292003342"
+  frameborder="0"
+  allowfullscreen
+  width="1920"
+  height="1080"
+></iframe>
 
 [Direct Link](https://vimeo.com/292003342)
 
-
-
-## Exhibitions
+## Expositions
 
 - Lyon City Hall - November/December 2018
 - [Toï Toï Le Zinc](//www.toitoilezinc.fr/) - June/July 2019
 - MJC Montplaisir - January 2020
 
-<iframe src="https://player.vimeo.com/video/306033197" frameborder="0" allowfullscreen width="1920" height="1080"></iframe>
+<iframe
+  src="https://player.vimeo.com/video/306033197"
+  frameborder="0"
+  allowfullscreen
+  width="1920"
+  height="1080"
+></iframe>
 
 [Direct Link](https://vimeo.com/306033197)
 
+## Scénographie
 
+Cadres photo numériques, chacun jouant en boucle une vidéo humanlapse. Les cadres sont autonomes : ils s'allument le matin et s'éteignent le soir. Ils peuvent être accrochés sur des pieds ou au mur pour que les visiteurs puissent voir les cadres comme dans une exposition photo.
 
-## Scenography
-
-Digital photo frames, each one looping a single humanlapse video. The frames are fully autonomous, turning on in the morning and turning off in the evening. They can be fixed on poles or walls so visitors can walk around each humanlapse as they would for a photo exhibition.
-
-
-<ImageGrid props={props}/>
+<ImageGrid props={props} />
