--- a/src/pages/2018-09-01-humanlapse/index.mdx
+++ b/src/pages/2018-09-01-humanlapse/index.mdx
@@ -5,36 +5,42 @@ category: portfolio
 language: en
 title: Humanlapse
 subtitle: Portraits in motion
-description: description
-date: 2019-02-01'
-image:  cover.jpg
+description: Photography project aiming to explore usage of timelapse and hyperlapse techniques for portraits.
+date: '2019-02-01'
+image: cover.jpg
+priority: 3
 embeddedImagesLocal:
-    - b-2.jpg
-    - b-5.jpg
-    - b-11.jpg
-    - b-1.jpg
-    - b-7.jpg
-    - b-10.jpg
+  - b-2.jpg
+  - b-5.jpg
+  - b-11.jpg
+  - b-1.jpg
+  - b-7.jpg
+  - b-10.jpg
 ---
 
+Photography project aiming to explore usage of timelapse and hyperlapse techniques for portraits.
 
-## Description
-
-**Humanlapse** is a photography project aiming to explore usage of timelapse and hyperlapse techniques for portraits.
-
-<a href="https://instagram.com/maximetouroute/" target="_blank" rel="noreferrer noopener">Check out Humanlapses on Instagram (Low quality)</a>
+<a
+  href="https://instagram.com/maximetouroute/"
+  target="_blank"
+  rel="noreferrer noopener"
+>
+  Check out Humanlapses on Instagram (Low quality)
+</a>
 
 [Check out humanlapses on the showcase website (High quality)](http://maximetouroute.github.io/humanlapse)
 
-
-
 #### Project Teaser
 
-<iframe src="https://player.vimeo.com/video/292003342" frameborder="0" allowfullscreen width="1920" height="1080"></iframe>
+<iframe
+  src="https://player.vimeo.com/video/292003342"
+  frameborder="0"
+  allowfullscreen
+  width="1920"
+  height="1080"
+></iframe>
 
 [Direct Link](https://vimeo.com/292003342)
-
-
 
 ## Exhibitions
 
@@ -42,15 +48,18 @@ embeddedImagesLocal:
 - [Toï Toï Le Zinc](//www.toitoilezinc.fr/) - June/July 2019
 - MJC Montplaisir - January 2020
 
-<iframe src="https://player.vimeo.com/video/306033197" frameborder="0" allowfullscreen width="1920" height="1080"></iframe>
-
-[Direct Link](https://vimeo.com/306033197)
-
-
-
-## Scenography
+## Set design
 
 Digital photo frames, each one looping a single humanlapse video. The frames are fully autonomous, turning on in the morning and turning off in the evening. They can be fixed on poles or walls so visitors can walk around each humanlapse as they would for a photo exhibition.
 
+<ImageGrid props={props} />
 
-<ImageGrid props={props}/>
+<iframe
+  src="https://player.vimeo.com/video/306033197"
+  frameborder="0"
+  allowfullscreen
+  width="1920"
+  height="1080"
+></iframe>
+
+[Direct Link](https://vimeo.com/306033197)
