--- a/src/pages/2018-10-30-innocent-words/index.mdx
+++ b/src/pages/2018-10-30-innocent-words/index.mdx
@@ -1,18 +1,27 @@
 ---
 path: /innocentWords
-layout: post
+layout: article
+category: portfolio
+language: en
 title: Innocent Words
 subtitle: Short movie
+description: Words that seem innocent... and yet.
 date: '2018-12-20'
-category: portfolio
-image: 'cover.png'
+image: cover.jpg
+priority: 5
+embeddedImagesLocal:
+  - logo.jpg
 ---
 
-<iframe src="https://www.youtube.com/embed/V4CsJzZjhOk?rel=0" frameborder="0" allowfullscreen width="1920" height="1080"></iframe>
+<iframe
+  src="https://www.youtube.com/embed/V4CsJzZjhOk?rel=0"
+  frameborder="0"
+  allowfullscreen
+  width="1920"
+  height="1080"
+></iframe>
 
 [Direct Link](https://www.youtube.com/watch?v=V4CsJzZjhOk)
-
-## Description
 
 A short movie about the precarious, made for the [Mobile Film Festival 2018](https://mobilefilmfestival.com/) _#StandUp4HumanRights_.
 Shot in a few hours with a smartphone.  
@@ -23,11 +32,11 @@ Also selected by the [Global Citizen Smartphone Short Film Festival](//www.oncar
 
 Words that seem innocent... and yet.
 
-#### Rules of the festival
+#### Festival rules
 
 1 minute short movie about the Human Rights, filmed with a smartphone.
 
-<br/>
-<br/>
+<br />
+<br />
 
-![Festival press logo](logo.png)
+![Festival press logo](logo.jpg)
