--- a/src/pages/2019-04-01-space-dances/index.fr.mdx
+++ b/src/pages/2019-04-01-space-dances/index.fr.mdx
@@ -4,28 +4,46 @@ layout: article
 category: portfolio
 language: fr
 title: Space Dances
-subtitle: Augmented Reality
-description: description
+subtitle: Réalité Augmentée
+description: Space Dances explore la danse en Réalité Augmentée et Réalité Mixte, en utilisant des technologies et méthodes de captation holographiques à l'état de l'art.
 date: '2020-01-01'
+priority: 1
 image: cover2.jpg
 ---
 
-<iframe src="https://player.vimeo.com/video/388504943" frameborder="0" allowfullscreen width="1920" height="1080"></iframe>
+<iframe
+  src="https://player.vimeo.com/video/388504943"
+  frameborder="0"
+  allowfullscreen
+  width="1920"
+  height="1080"
+></iframe>
 
 [Direct Link](//vimeo.com/388504943)
 
-## Description
+**Space Dances** explore la danse en Réalité Augmentée et Réalité Mixte, en utilisant des technologies et méthodes de captation holographiques à l'état de l'art.
 
-**Space Dances** is a project exploring dance in Augmented/Mixed Reality using state of the art technologies and filming techniques.
+[Site web du projet](//natachapaquignon.com)
 
-[Main website for this project](//natachapaquignon.com)
-
-[Facebook Page](//www.facebook.com/SpaceDances/)
+[Page Facebook](//www.facebook.com/SpaceDances/)
 
 #### Role
 
-- Augmented Reality Film maker, exploration of new film formats (360°, multi-planar, ultra-wide, 3D...)
-- Development of Augmented Reality post production workflows
-- Design and development of Artificial Intelligence rotoscoping to detour bodies without green screens
-- Development of video encoding with transparency and real-time color grading/VFX for mobile devices
-- Implementation of tools to create render farms on the go with any computer available
+- Réalisateur de vidéos holographiques pour la Réalité Augmentée, exploration de nouveaux langages visuels (360°, multi-plan, utlra-large, 3D...)
+- Developpement de workflows de post-production pour Réalité Augmentée
+  Development of Augmented Reality post production workflows
+- Conception et developpement de méthodes de rosoctopie en Intelligence Artificielle pour détourer des corps sans fond vert
+- Developpement de techniques d'encoding vidéo pour permettre la gestion de la transparence et l'étalonnage/VFX en temps réel sur appareils mobiles
+- Implémentation d'outils pour faire des fermes de rendu avec des appareils grands publics
+
+#### Distribution
+
+Autrice : Natacha Paquignon
+Chorégraphe : Natacha Paquignon, avec la complicité des danseurs  
+Danseurs : Lise Bois, Clément Olivier, Natacha Paquignon.  
+Co-auteur (création visuelle), captation et post-production vidéo : Maxime Touroute  
+Co-auteur (création sonore), compositeur, musicien, technicien du son : Valentin Durif  
+Conception et réalisation de l’application de réalité augmentée : Amaury Belin, MuseoPic  
+Écriture des textes : Natacha Paquignon, en collaboration avec Lise Bois  
+Textes historiques : extraits de lettres, bulletins municipaux, documents historiques variés, en fonction du
+territoire exploré.
