--- a/src/pages/2019-04-01-space-dances/index.mdx
+++ b/src/pages/2019-04-01-space-dances/index.mdx
@@ -5,16 +5,21 @@ category: portfolio
 language: en
 title: Space Dances
 subtitle: Augmented Reality
-description: description
+description: Project exploring dance in Augmented/Mixed Reality using state of the art technologies and filming techniques.
 date: '2020-01-01'
+priority: 1
 image: cover2.jpg
 ---
 
-<iframe src="https://player.vimeo.com/video/388504943" frameborder="0" allowfullscreen width="1920" height="1080"></iframe>
+<iframe
+  src="https://player.vimeo.com/video/388504943"
+  frameborder="0"
+  allowfullscreen
+  width="1920"
+  height="1080"
+></iframe>
 
 [Direct Link](//vimeo.com/388504943)
-
-## Description
 
 **Space Dances** is a project exploring dance in Augmented/Mixed Reality using state of the art technologies and filming techniques.
 
@@ -22,10 +27,19 @@ image: cover2.jpg
 
 [Facebook Page](//www.facebook.com/SpaceDances/)
 
-#### Role
+## Role
 
 - Augmented Reality Film maker, exploration of new film formats (360°, multi-planar, ultra-wide, 3D...)
 - Development of Augmented Reality post production workflows
 - Design and development of Artificial Intelligence rotoscoping to detour bodies without green screens
 - Development of video encoding with transparency and real-time color grading/VFX for mobile devices
 - Implementation of tools to create render farms on the go with any computer available
+
+## Distribution
+
+Author, choreographer, director : Natacha Paquignon  
+Co-author (visual creation), video maker, engineer : Maxime Touroute  
+Co-author (sound creation), composer : Valentin Durif  
+Dancers : Lise Bois, Clément Olivier, Natacha Paquignon  
+Text writing for the guides : Natacha Paquignon, in cooperation with Lise Bois  
+Historical texts : extracts of letters, municipal bulletins, historical documents...
