--- a/src/pages/2019-08-01-indice50/index.fr.mdx
+++ b/src/pages/2019-08-01-indice50/index.fr.mdx
@@ -4,21 +4,25 @@ layout: article
 category: portfolio
 language: fr
 title: Indice 50
-subtitle: Short Movie
-description: description
+subtitle: Court Métrage
+description: Un homme cherche à rejoindre ses amis à la piscine, mais il n'a clairement pas la bonne adresse.
 date: '2019-01-01'
+priority: 5
 image: cover.jpg
 ---
 
-
-<iframe src="https://www.youtube.com/embed/5gkkIeeAuSU?rel=0" frameborder="0" allowfullscreen width="1920" height="1080"></iframe>
+<iframe
+  src="https://www.youtube.com/embed/5gkkIeeAuSU?rel=0"
+  frameborder="0"
+  allowfullscreen
+  width="1920"
+  height="1080"
+></iframe>
 
 [Direct Link](https://www.youtube.com/watch?v=5gkkIeeAuSU)
 
-#### Description
-
-Indie short movie made in one afternoon. Co-directed with **Vincent Montalieu**.
+Court métrage indépendant réalisé en une après-midi. Co-réalisé avec **Vincent Montalieu**.
 
 #### Synopsis
 
-A man wants to join its friends at the swimming pool but he clearly doesn't have the right address.
+Un homme cherche à rejoindre ses amis à la piscine, mais il n'a clairement pas la bonne adresse.
