--- a/src/pages/2020-01-01-babel/index.mdx
+++ b/src/pages/2020-01-01-babel/index.mdx
@@ -5,26 +5,28 @@ category: portfolio
 language: en
 title: Babel
 subtitle: Multiplayer Videoprojected Game
-description: description
+description: Multiplayer projected game in which the public tries to build the tallest tower.
 date: '2019-11-01'
 image: b-4.jpg
+priority: 4
 embeddedImagesLocal:
-    - b-3.jpg
-    - b-4.jpg
+  - b-3.jpg
+  - b-4.jpg
 ---
 
 ![Cover](b-4.jpg)
 
-<ImageGrid props={props} indices={[0]}/>
+<ImageGrid props={props} indices={[0]} />
 
+Multiplayer projected game in which the public tries to build the tallest tower.
 
-**Babel** is a multiplayer projected game in which the public tries to build the tallest tower.
-
-Players have a joystick on their smartphones to control a small helicopter on the wall. They can drop various types of building blocks. Blocks are bouncy and fragile making the structures unpredictable and very fun to build. To make the highest tower players need to collaborate. They can also compete and sabotage others’ towers causing them to fall in surprising ways.
-
+Players have a joystick on their smartphones to control a small helicopter on the wall.
+They can drop various types of building blocks. Blocks are bouncy and fragile making the structures unpredictable and very fun to build.
+To make the highest tower players need to collaborate. They can also compete and sabotage others’ towers causing them to fall in surprising ways.
 Blocs are customised to fit the event mood, location and the facade architecture.
 
-#### Artists
+## Distribution
 
-Tom Guillermin  
-Maxime Touroute
+Game development : Tom Guillermin  
+Realtime interaction : Maxime Touroute  
+Infrastructure Development : Guillaume Rahbari / Rémy Dupanloup
