--- a/src/pages/2020-04-01-draw-from-the-window/index.fr.mdx
+++ b/src/pages/2020-04-01-draw-from-the-window/index.fr.mdx
@@ -4,26 +4,31 @@ layout: article
 category: portfolio
 language: fr
 title: Draw From The Window
-subtitle: Decentralised Videomapping
-description: description
+subtitle: Videomapping Décentralisé
+description: Système de vidéoprojection décentralisé pour ramener l'art dans les zones résidentielles pendant les confinements.
 date: '2020-04-01'
 image: 26v_5_webw.jpg
+priority: 3
 embeddedImagesLocal:
-    - 26v_2_webw.jpg
-    - 26v_3_webw.jpg
-    - 26v_1_web.jpg
-    - 26v_6_webw.jpg
-    - webw-1.jpg
-    - 2020_6_webw.jpg
-    - 2020_7_web.jpg
-    - 26v_4_webw.jpg
-    - 26v_5_webw.jpg
+  - 26v_2_webw.jpg
+  - 26v_3_webw.jpg
+  - 26v_1_web.jpg
+  - 26v_6_webw.jpg
+  - webw-1.jpg
+  - 2020_6_webw.jpg
+  - 2020_7_web.jpg
+  - 26v_4_webw.jpg
+  - 26v_5_webw.jpg
 ---
 
-
 ![Picture of a videoprojection on the 26th of April](26v_5_webw.jpg)
-<ImageGrid props={props}/>
 
-During lockdown in France we designed a decentralised videoprojection installation to bring art at the doorstep of residential areas. People all over France were able to exhibit our [Live Drawing Installation](https://thelivedrawingproject.com) from their window without prior knowledge in videomapping.
+<ImageGrid props={props} />
 
-Drawings traveled between locations connecting people and creating a **collective artwork evolving with upcoming drawings**. More than **9500 drawings** were made by **560 participants** in **30 locations** across **10 cities** simultaneously.
+Système de vidéoprojection décentralisé pour ramener l'art dans les zones résidentielles pendant les confinements. Les habitants du monde entier peuvent prendre leur vidéoprojecteur de salon et projeter [l'installation Live Drawing](https://thelivedrawingproject.com) à leur fenêtre, sans prérequis en videomapping.
+
+N'importe qui sur la planète peut dessiner et les dessins apparaissent sur tous les projecteurs en temps-réel. Les dessins voyagent entre les lieux, connectant les gens et créant une **oeuvre collective qui évolue à chaque nouveau dessin**.
+
+Pendant le confinement français en avril 2020, plus de **9500 dessins** ont été réalisés par **560 habitants** dans **30 lieux, 10 villes** simultanément.
+
+Le projet a reçu le prix _Pépite des pépite_ par le Ministère de l'enseignement supérieur, de la recherche et de l'innovation pour son initiative pendant le confinement.
