--- a/src/pages/2020-04-01-draw-from-the-window/index.mdx
+++ b/src/pages/2020-04-01-draw-from-the-window/index.mdx
@@ -5,25 +5,30 @@ category: portfolio
 language: en
 title: Draw From The Window
 subtitle: Decentralised Videomapping
-description: description
+description: Decentralised videoprojection system to bring art at the doorstep of residential areas during lockdowns.
 date: '2020-04-01'
 image: 26v_5_webw.jpg
+priority: 3
 embeddedImagesLocal:
-    - 26v_2_webw.jpg
-    - 26v_3_webw.jpg
-    - 26v_1_web.jpg
-    - 26v_6_webw.jpg
-    - webw-1.jpg
-    - 2020_6_webw.jpg
-    - 2020_7_web.jpg
-    - 26v_4_webw.jpg
-    - 26v_5_webw.jpg
+  - 26v_2_webw.jpg
+  - 26v_3_webw.jpg
+  - 26v_1_web.jpg
+  - 26v_6_webw.jpg
+  - webw-1.jpg
+  - 2020_6_webw.jpg
+  - 2020_7_web.jpg
+  - 26v_4_webw.jpg
+  - 26v_5_webw.jpg
 ---
 
-
 ![Picture of a videoprojection on the 26th of April](26v_5_webw.jpg)
-<ImageGrid props={props}/>
 
-During lockdown in France we designed a decentralised videoprojection installation to bring art at the doorstep of residential areas. People all over France were able to exhibit our [Live Drawing Installation](https://thelivedrawingproject.com) from their window without prior knowledge in videomapping.
+<ImageGrid props={props} />
 
-Drawings traveled between locations connecting people and creating a **collective artwork evolving with upcoming drawings**. More than **9500 drawings** were made by **560 participants** in **30 locations** across **10 cities** simultaneously.
+Decentralised videoprojection system to bring art at the doorstep of residential areas during lockdowns. People all over the world can take their living room projector and project the [Live Drawing Installation](https://thelivedrawingproject.com) from their window without prior knowledge in videomapping.
+
+Everyone on the planet can draw and drawings get projected on every projector in real time. Drawings travel between locations connecting people and creating a **collective artwork evolving with upcoming drawings**.
+
+During French lockdown in April 2020, more than **9500 drawings** were made by **560 participants** in **30 locations & 10 cities** simultaneously.
+
+The lockdown initiative got awarded a _Pepite des Pepites 2020_ prize by the French ministry of innovation.
