--- a/src/pages/2018-11-30-the-live-drawing-project/index.fr.mdx
+++ b/src/pages/2018-11-30-the-live-drawing-project/index.fr.mdx
@@ -4,25 +4,24 @@ layout: article
 category: portfolio
 language: fr
 title: Live Drawing Project
-subtitle: Collaborative Drawing
-description: description
+subtitle: Dessin Participatif
+description: Projet d'art numérique explorant les possibilités de dessin participatif et collectif en temps réel.
 date: '2020-01-01'
-image:  b.jpg
+image: b.jpg
+priority: 1
 embeddedImagesLocal:
-- 26v_2_webw.jpg
-- web-6.jpg
-- web-11.jpg
-- web-21.jpg
-- web-14.jpg
-- SprayingBoard_7.jpg
-- web-23.jpg
-- b.jpg
-- 6.jpg
+  - 26v_2_webw.jpg
+  - web-6.jpg
+  - web-11.jpg
+  - web-21.jpg
+  - web-14.jpg
+  - SprayingBoard_7.jpg
+  - web-23.jpg
+  - b.jpg
+  - 6.jpg
 ---
 
-<ImageGrid props={props}/>
+<ImageGrid props={props} />
 
-
-A digital arts project about experiencing the possibilities of collaborative and live drawing.
-More informations about it on the official website [Live Drawing Project](//thelivedrawingproject.com).
-
+Projet d'art numérique explorant les possibilités de dessin participatif et collectif en temps réel.  
+Plus d'informations sur le site officiel [Live Drawing Project](//thelivedrawingproject.com).
