--- a/src/pages/2021-07-15-le-phare/index.mdx
+++ b/src/pages/2021-07-15-le-phare/index.mdx
@@ -5,45 +5,42 @@ category: portfolio
 language: en
 title: Le Phare
 subtitle: 360° Projection
-description: description
+description: Interactive installation with a 360° video projection system. Children are invited to use a boat wheel to control the projection.
 date: '2021-07-15'
 image: cover.jpg
+priority: 1
 embeddedImagesLocal:
-    - cover.jpg
-    - c.jpg
-    - a.jpg
-    - b.jpg
-    
+  - cover.jpg
+  - c.jpg
+  - a.jpg
+  - b.jpg
 ---
 
 ![Cover](cover.jpg)
 
 <ImageGrid props={props} indices={[1, 2, 3]} />
 
-**Le Phare** (The Lighthouse) is an interactive installation with a 360° projection system. Children are invited to use a boat wheel to control the projection.
+Interactive installation with a 360° video projection system. Children are invited to use a boat wheel to control the projection.
 
-_Le Phare invites us to look at the horizon beyond city walls. It projects intimate figures talking about the sacred and forgotten links between humans and nature. Meanwhile, on the walls, sea level is rising..._
+_Le Phare (The Lighthouse) invites us to look at the horizon beyond city walls. It projects intimate figures talking about the sacred and forgotten links between humans and nature. Meanwhile, on the walls, sea level is rising..._
 
+## Role
 
-  
-**Role**
-
-Development and interactivity
-
+Development and real time interaction.  
+Conception of hybrid writing principles adapting to boat wheel movements.
 
 ## Distribution
 
-Direction artistique : Pierre Amoudruz  
-Composition musicale & spatialisation : David Guerra, Victor Roux  
-Création vidéo, 3D & temps réel : Pierre Amoudruz, Victor Roux,  Maxime Touroute  
-Création lumière : en cours  
-Commédien-nes voix off : Jana Klein  
-Design d'interaction : Pierre Amoudruz, David Guerra, Thomas Pachoud  
-Électronique, ingéniérie & motorisation : Thomas Pachoud  
-Scénographie & construction : Vincent Loubert [Louxor Spectacle](https://www.louxorspectacle.com/)  
-Direction technique : Alexandre George  
-Chargée de production : Cyrielle Tissandier  
-Coproductions : Lieux publics, Centre National des Arts de la Rue et dans l’espace public & Pôle européen de production , Marseille Les Ateliers Frappaz, Centre National des Arts de la Rue et dans l’espace public Villeurbanne, Les Abattoirs, Centre National des Arts de la Rue et dans l’espace public & le Festival Chalon dans la rue Bipolar Production - Le Plan Rhône., Montpellier  
+Art direction : Pierre Amoudruz  
+Music & Spatialisation : David Guerra, Victor Roux  
+Video, 3D, Real time : Pierre Amoudruz, Victor Roux, Maxime Touroute  
+Lighting : in progress
+Voiceover talent : Jana Klein  
+Interaction design : Pierre Amoudruz, David Guerra, Thomas Pachoud  
+Engineering : Thomas Pachoud  
+Set design and building : Vincent Loubert [Louxor Spectacle](https://www.louxorspectacle.com/)  
+Technical Direction : Alexandre George  
+Production delegate : Cyrielle Tissandier  
+Co-Productions : Lieux publics, Centre National des Arts de la Rue et dans l’espace public & Pôle européen de production , Marseille Les Ateliers Frappaz, Centre National des Arts de la Rue et dans l’espace public Villeurbanne, Les Abattoirs, Centre National des Arts de la Rue et dans l’espace public & le Festival Chalon dans la rue Bipolar Production - Le Plan Rhône., Montpellier  
 Production : [AADN - Arts et Cultures Numériques](https://aadn.org/)  
-Subventionnée par : SACD  
-Auteurs d’espaces : Région et DRAC Auvergne Rhône-Alpes - Fonds [SCAN]  
+Grants by : SACD / Auteurs d’espaces / Région et DRAC Auvergne Rhône-Alpes / Fonds [SCAN](https://www.auvergnerhonealpes.fr/aide/2/89-fonds-de-soutien-a-la-creation-artistique-numerique-fonds-scan-culture-patrimoine.htm)
