--- a/src/pages/about/index.mdx
+++ b/src/pages/about/index.mdx
@@ -3,186 +3,106 @@ path: /about
 layout: page
 language: en
 title: About
-description: une description
-image: 'profile.jpg'
+description: About Maxime Touroute
+image: profile.jpg
 embeddedImagesLocal:
   - profile.jpg
 ---
 
-<!-- <div class="squareGatsbyPicture" style="min-width: 70%">
+<Image alt={"Image d'illustration"} image={props.localImages[0]} />
 
-<img src="profile.jpg"></img>
+<br />
+<br />
 
-</div>
-<br/>
-<br/> -->
+### — Hi, I'm Maxime.
 
-### — I'm Maxime, engineer specialised in **audiovisual arts**
+Passionate by cinema, photography and digital arts, I love to work on projects in which my creativity and technical skills can be an asset. Well versed in **film making** from shooting to post-production. Being a full fledged engineer I specialise on **audiovisual technologies and software development**. I'm not afraid to learn cutting-edge technologies to open up new creative possibilities.
 
-Passionate by cinema, photography and digital arts, I love to work on projects in which my creativity and technical skills can be an asset. I'm well versed in **film making** from shooting to post-production. Being a full fledged engineer I specialise on **audiovisual technologies and software development**. I'm not afraid to learn cutting-edge technologies to open up new creative possibilities.
+**Currently open to new projects**
 
-Currently open to new projects  
-— if you would like to make something together, get in touch at [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
-
-<!-- <br><br> -->
-
-- [Work Showcase](/)
-- [Photography](/photography)
-- [Color Grading](/colorist)
+— Get in touch at [maxime.touroute@gmail.com](mailto:maxime.touroute@gmail.com)
 
 #### Distinctions, Awards, Exhibitions
 
-- "Pepite des Pépites" award for [Draw From The Window](/drawfromthewindow#content) (2020) - **Delivered by [Pepite France](https://www.pepite-france.fr/)**
-- [Space Dances](/spacedances#content) for European Heritage Days (2020)
-- Culture Night Ireland (2020) - **Cross-country Interactive Projection between Dublin and Paris [The Live Drawing Project](/livedrawing#content)**
-- [Draw From The Window](/drawfromthewindow#content) (2020) - **Nationwide Interactive Projection during France lockdown**
-- [Spraying Board](https://sprayingboard.thedailyboard.co/) (2020) - **Interactive Projection [The Live Drawing Project](/livedrawing#content)**
-- Copenhagen Light Festival (2020) - **Performance [The Live Drawing Project](/livedrawing#content)**
-- Calgary Winter Lights Festival (2020) - **Exhibition [The Live Drawing Project](/livedrawing#content)**
-- Lyon Young and Culture House (2020)- **Exhibition [Humanlapse](/humanlapseProject#content)**
-- Le Creusot Video Game Festival (2019) - **Interactive Projection [The Live Drawing Project](/livedrawing#content)**
-- Lyon Young Film Festival (2019) - **Film Projection "Les étoiles du LYF" [Réalité](/realite#content)**
-- Citizen Global Film Festival (2019) - **Official Selection [Innocent Words](/innocentWords#content)**
-- Chevagny Art Festival (2019) - **Performance [The Live Drawing Project](/livedrawing#content)**
-- Toï Toï Le Zinc (2019) - **Exhibition [Humanlapse](/humanlapseProject#content)**
-- Festi Lumi Light Festival (2019) - **Performance [The Live Drawing Project](/livedrawing#content)**
-- Red Cross and Health Film Festival (2019) - **Short Movie Selection [Réalité](/realite#content)**
-- Peinture Fraiche Street Art Festival (2019) - **Interactive Projection [The Live Drawing Project](/livedrawing#content)**
-- Comete Film Festival (2019) - **Official Selection [Réalité](/realite#content)**
-- Lyon Light Festival (off) (2018) - **Interactive Projection [The Live Drawing Project](/livedrawing#content)**
-- Lyon City Hall (2019) - **Exhibition [Humanlapse](/humanlapseProject#content)**
-- Mobile Film Festival (2018) - **Official Selection [Innocent Words](/innocentWords#content)**
-- Lyon Young Film Festival (2018) - **Official Selection [Réalité](/realite#content)**
-- Student Photo contest "Wild" (2017) - **2nd regional prize**
+- (Upcoming Events) Check my [Facebook](http://facebook.com/maxime.touroute) and [Instagram](http://instagram.com/maximetouroute)
 
-<br/>
-<br/>
+- (2021) [Spraying Board (2nd Edition)](https://sprayingboard.thedailyboard.co/)  
+  **Interactive Projection [Live Drawing](/livedrawing#content)**
 
-# Work Experience
+- (2021) [Lieux Miroir](/spacedances#content) at Aubusson  
+  **City scale AR holographic dance experience**
 
-#### Visual Arts Engineer, Film Maker / Space Dances
+- (2021) Music Festival - Beijing  
+  **[Monolith](/monolith#content) with the [French Institute](https://www.institutfrancais.com)**
 
-_Ongoing_
+- (2020) Novtec - Lima, Peru  
+  **Remote Projection [Live Drawing](/livedrawing#content)**
 
-- Augmented Reality Film maker, exploration of new film formats (360°, multi-planar, ultra-wide, 3D...)
-- Development of Augmented Reality post production workflows
-- Design and development of Artificial Intelligence rotoscoping to detour bodies without green screens
-- Development of video encoding with transparency and real-time color grading/VFX for mobile devices
-- Implementation of tools to create render farms on the go with any computer available
+- (2020) Digital November - Copenhagen, Danemark  
+  **Remote Projection [Live Drawing](/livedrawing#content) with the [French Institute](https://www.institutfrancais.com)**
 
-#### Software Engineer in Digital Arts
+- (2020) **Pepite des Pépites** award for [Draw From The Window](/drawfromthewindow#content)  
+  **Delivered by [Pepite France](https://www.pepite-france.fr/)**
 
-_Ongoing_
+- (2020) European Heritage Days  
+  **[Space Dances](/spacedances#content)**
 
-- Working on the development of [Millumin](https://www.millumin.com/), a full-fledged solution for audiovisual shows and art installations
-- Software engineer for [The Live Drawing Project](/livedrawing#content), a realtime collaborative drawing installation
-- Software engineer for [Museopic](//www.museopic.com/), Research and Development on state of the art Augmented Reality technologies
+- (2020) Culture Night - Dublin, Ireland  
+  **Cross-country Interactive Projection between Dublin and Paris [Live Drawing](/livedrawing#content)**
 
-#### Others
+- (2020) [Draw From The Window](/drawfromthewindow#content)  
+  **Nationwide Interactive Projection during France lockdown**
 
-- Short jobs on art projects & art shows as a developer, adviser or film maker
-- Deep dedication in joining movie shootings for professional and also indie projects
-- Film maker for cultural and corporate events
-- Conception and crafting of scenographies for art exhibitions
-- Talks and workshops on visual arts
-- Web design & SEO
+- (2020) [Spraying Board](https://sprayingboard.thedailyboard.co/)  
+  **Interactive Projection [The Live Drawing Project](/livedrawing#content)**
 
-<br/>
-<br/>
+- (2020) Copenhagen Light Festival  
+  **Performance [The Live Drawing Project](/livedrawing#content)**
 
-# Filmography
+- (2020) Calgary Winter Lights Festival  
+  **Exhibition [The Live Drawing Project](/livedrawing#content)**
 
-#### AR Dance Films (2019 - 2020)
+- (2020) Lyon Young and Culture House  
+  **Exhibit [Humanlapse](/humanlapseProject#content)**
 
-Film Maker of Augmented Reality Films (Pre, Shoot and Post).  
-Production: [Space Dances](/spacedances)
+- (2019) Le Creusot Video Game Festival  
+  **Projection [The Live Drawing Project](/livedrawing#content)**
 
-- CCO La Soie, Villeurbanne (2020)  
-  Ultra-wide films with 8:1 ratio using multicam panorama merging techniques.  
-  Projected in AR on a ~16meters screen.
+- (2019) Lyon Young Film Festival  
+  **Film Projection "Les étoiles du LYF" [Réalité](/realite#content)**
 
-- Subsistances, Lyon (2019-2020)  
-  Multi-planar and 360° formats distributed in a wide outdoor space.
+- (2019) Citizen Global Film Festival  
+  **Official Selection with [Innocent Words](/innocentWords#content)**
 
-- Scène Nationale d'Aubusson (2019)  
-  360° formats on the National Theater outdoor entrance.
+- (2019) Chevagny Art Festival  
+  **Projection [The Live Drawing Project](/livedrawing#content)**
 
-- CCO La Soie, Villeurbanne (2019)  
-  3-layer-depth dances inside a corridor.
+- (2019) Toï Toï Le Zinc  
+  **Exhibit [Humanlapse](/humanlapseProject#content)**
 
-#### [Indice 50](/indice50#content) (2019)
+- (2019) Festi Lumi Light Festival  
+  **Projection [The Live Drawing Project](/livedrawing#content)**
 
-_Short movie co-directed with Vincent Montalieu - 4'_  
-Role: **Cinematographer**
+- (2019) Red Cross and Health Film Festival  
+  **Official Selection with [Réalité](/realite#content)**
 
-#### [Harmonie des sphères](/harmoniedesspheres) (2019)
+- (2019) Peinture Fraiche Street Art Festival  
+  **Interactive Projection [The Live Drawing Project](/livedrawing#content)**
 
-_Short movie by Vincent Montalieu - 20'_  
-Role: **Cinematographer**
+- (2019) Comete Film Festival  
+  **Official Selection [Réalité](/realite#content)**
 
-#### [Innocent Words](/innocentWords#content) (2018)
+- (2018) Lyon Light Festival (off)  
+  **Interactive Projection [The Live Drawing Project](/livedrawing#content)**
 
-_Short movie - 1'_  
-Official Selection Mobile Film Festival  
-Role: **Director**
+- (2019) Lyon City Hall  
+  **First Exhibit of [Humanlapse](/humanlapseProject#content)**
 
-#### [Réalité](/realite#content) (2018)
+- (2018) Mobile Film Festival  
+  **Official Selection with [Innocent Words](/innocentWords#content)**
 
-_Short movie - 3'_  
-Official Selections  
-Role: **Director**
+- (2018) Lyon Young Film Festival  
+  **Official Selection with [Réalité](/realite#content)**
 
-_Tech Crew - Indie films_
-
-- L'héritage, Ep 1. (2019)  
-  _Web series by Carole Siret - 5'_  
-  Role: **Cinematographer**
-
-- Franchement, ça se mange (2019)  
-  _Short movie by Bertille Garraud - 3'_  
-  Role: **Colorist**
-
-- Ouno (2019)  
-  _Short movie by Alex Boulin - 3'_  
-  Role: **Cinematographer**  
-  3rd public prize, Kino Lyon
-
-- L'obsession du lac (2019)  
-  _Short movie by Bertille Garraud - 3'_  
-  Role: **Colorist**
-
-- La Cible (2019)  
-  _Short movie by Alex Boulin - 3'_  
-  Role: **Camera, Colorist**  
-  3rd public prize, Kino Lyon
-
-- Esteban (2019)  
-  _Short movie by Sebastien Jimenez - 10'_  
-  _Cinematography by Pierre Chamming_  
-  Role: **1st Assistant Camera**
-
-- Toc Toc (2018)  
-  _Short movie by Nicolas Sintes and Vincent Montalieu_  
-  Role: **Cinematographer**
-
-- Petit poucet (2018)  
-  _24h short movie co-directed with Steve Houeto and Gaelle Costa Ellias_  
-  Role: **Co-director**
-
-- Eva (2018)  
-  _Short movie by Julien Gasparoux - 4'_  
-  Role: **Colorist**
-
-- Quand le loup n’y est pas (2018)  
-  _Short movie by Josephine Santraille - 20'_  
-  Role: **Sound engineer**
-
-* Yllib (2017)  
-  _Feature by Cecile Briffoz_  
-  _Cinematography by Philippe Brelot_  
-  Role: **Sound assistant**
-
-# Studies
-
-- Entrepreneurship studies, Lyon, France
-- Engineering school, Nice, France - Specialised in multimedia
+- (2017) Student Photo contest "Wild"  
+  **2nd regional prize**
